--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ vtkio = { version = "0.7", git = "https://github.com//elrnv/vtkio.git", branch =
 
 [workspace.dependencies]
 geo = { package = "meshx", version = "0.6", git = "https://github.com/elrnv/meshx.git", branch = "vtkio-0.7", features = ["io", "serde_all"] }
+env_logger = "0.11"
+na = { package = "nalgebra", version = "0.32" }
