--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -7,7 +7,7 @@ license = "MPL-2.0"
 
 [dependencies]
 rayon = "1.5"
-na = { package = "nalgebra", version = "0.32" }
+na = { workspace = true }
 hrbf = "0.8"
 geo = { workspace = true }
 flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5", features = ["rayon"] }
