--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -40,7 +40,7 @@ bincode = "1.3"
 partition = "0.1" # Fast in-place slice partitioning.
 
 #simd-json = { version = "0.4", optional = true }
-#serde_json = { version = "1.0", optional = true }
+serde_json = { version = "1.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 accelerate = { package = "accelerate-framework", version = "0.2" }
@@ -56,10 +56,11 @@ criterion = "0.3"
 env_logger = { workspace = true }
 
 [features]
-default = ["deterministic", "mkl"]
+default = ["deterministic", "mkl", "json"]
 unstable = ["criterion/real_blackbox"]
 mkl = ["mkl-corrode"]
 deterministic = [] # Enables seeded random state.
+json = ["serde_json"]
 
 [[bench]]
 name = "box_stretch"
