Fix box swing scene config

--- a/softy-eval/examples/box_swing_config.json
+++ b/softy-eval/examples/box_swing_config.json
@@ -134,6 +134,7 @@
           ]
         }
       },
+      "cell_vertex_attributes": {},
       "cell_attributes": {
         "mtl_id": {
           "I32": [
@@ -151,7 +152,8 @@
             1
           ]
         }
-      }
+      },
+      "num_vertices": 8
     },
     "animation": [
       {
@@ -194,6 +196,336 @@
           ],
           [
             0.5,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 2,
+        "positions": [
+          [
+            0.5099999904632568,
+            0.5,
+            0.5
+          ],
+          [
+            0.5099999904632568,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 3,
+        "positions": [
+          [
+            0.5199999809265137,
+            0.5,
+            0.5
+          ],
+          [
+            0.5199999809265137,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 4,
+        "positions": [
+          [
+            0.5299999713897705,
+            0.5,
+            0.5
+          ],
+          [
+            0.5299999713897705,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 5,
+        "positions": [
+          [
+            0.5400000214576721,
+            0.5,
+            0.5
+          ],
+          [
+            0.5400000214576721,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 6,
+        "positions": [
+          [
+            0.550000011920929,
+            0.5,
+            0.5
+          ],
+          [
+            0.550000011920929,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 7,
+        "positions": [
+          [
+            0.5600000023841858,
+            0.5,
+            0.5
+          ],
+          [
+            0.5600000023841858,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 8,
+        "positions": [
+          [
+            0.5699999928474426,
+            0.5,
+            0.5
+          ],
+          [
+            0.5699999928474426,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 9,
+        "positions": [
+          [
+            0.5799999833106995,
+            0.5,
+            0.5
+          ],
+          [
+            0.5799999833106995,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 10,
+        "positions": [
+          [
+            0.5899999737739563,
+            0.5,
+            0.5
+          ],
+          [
+            0.5899999737739563,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 11,
+        "positions": [
+          [
+            0.6000000238418579,
+            0.5,
+            0.5
+          ],
+          [
+            0.6000000238418579,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 12,
+        "positions": [
+          [
+            0.6100000143051147,
+            0.5,
+            0.5
+          ],
+          [
+            0.6100000143051147,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 13,
+        "positions": [
+          [
+            0.6200000047683716,
+            0.5,
+            0.5
+          ],
+          [
+            0.6200000047683716,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 14,
+        "positions": [
+          [
+            0.6299999952316284,
+            0.5,
+            0.5
+          ],
+          [
+            0.6299999952316284,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 15,
+        "positions": [
+          [
+            0.6399999856948853,
+            0.5,
+            0.5
+          ],
+          [
+            0.6399999856948853,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 16,
+        "positions": [
+          [
+            0.6499999761581421,
+            0.5,
+            0.5
+          ],
+          [
+            0.6499999761581421,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 17,
+        "positions": [
+          [
+            0.6599999666213989,
+            0.5,
+            0.5
+          ],
+          [
+            0.6599999666213989,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 18,
+        "positions": [
+          [
+            0.6700000166893005,
+            0.5,
+            0.5
+          ],
+          [
+            0.6700000166893005,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 19,
+        "positions": [
+          [
+            0.6800000071525574,
+            0.5,
+            0.5
+          ],
+          [
+            0.6800000071525574,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 20,
+        "positions": [
+          [
+            0.6899999976158142,
+            0.5,
+            0.5
+          ],
+          [
+            0.6899999976158142,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 21,
+        "positions": [
+          [
+            0.699999988079071,
+            0.5,
+            0.5
+          ],
+          [
+            0.699999988079071,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 22,
+        "positions": [
+          [
+            0.7099999785423279,
+            0.5,
+            0.5
+          ],
+          [
+            0.7099999785423279,
+            0.5,
+            -0.5
+          ]
+        ]
+      },
+      {
+        "frame": 23,
+        "positions": [
+          [
+            0.7200000286102295,
+            0.5,
+            0.5
+          ],
+          [
+            0.7200000286102295,
             0.5,
             -0.5
           ]
