--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -45,8 +45,8 @@ serde_json = { version = "1.0", optional = true }
 [target.'cfg(target_os = "macos")'.dependencies]
 accelerate = { package = "accelerate-framework", version = "0.2" }
 
-# [target.'cfg(target_os = "windows")'.dependencies]
-# mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "openmp"], optional = true }
+[target.'cfg(target_os = "windows")'.dependencies]
+mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "openmp"], optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "tbb"], optional = true }
